BaSP-W03-2022: Sidebar with flexbox ready

--- a/semana-03/index.html
+++ b/semana-03/index.html
@@ -1,55 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>
-            Trackgenix
-        </title>
-        <link rel="stylesheet" type="text/css" href="css/reset.css">
-        <link rel="stylesheet" type="text/css" href="css/style.css">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
-        <script src="https://kit.fontawesome.com/e0deaaf2c8.js" crossorigin="anonymous"></script>
-    </head>
-    <body>
-        <aside>
-            <div id="logo">
-                <img src="assests/img.png/logo-picture.png" alt="Logo icon">
-                <h2 id:tittle>
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>
+        Trackgenix
+    </title>
+    <link rel="stylesheet" type="text/css" href="css/reset.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" href="css/sidebar.css">
+    <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+    <script src="https://kit.fontawesome.com/e0deaaf2c8.js" crossorigin="anonymous"></script>
+</head>
+
+<body>
+    <aside>
+        <div id="logo">
+            <img src="assests/img.png/logo-picture.png" alt="Logo icon">
+            <div class="title-row">
+                <h2>
                     Trackgenix
                 </h2>
                 <img class="arrow" src="./assests/img.png/arrow-icon.png" alt="arrow">
             </div>
-            <nav>
-                <ul>
-                    <li>
-                        <a href="#" id class="home-text-option">
-                            <i class="fa-solid fa-house"></i>Home
-                        </a>
-                    </li>
-                    <li>
-                        <a class="signup-icon-option" href="#">
-                            <i class="fa-solid fa-user"></i>SignUp
-                        </a>
-                    </li>
-                    <li class="login-icon-option">
-                        <a href="#">
-                            <i class="fa-solid fa-user"></i>Login
-                        </a>
-                    </li>
-                </ul>
-            </nav>
-            <nav>
+        </div>
+        <nav>
+            <ul>
+                <li>
+                    <a href="#" id class="home-text-option">
+                        <i class="fa-solid fa-house"></i>Home
+                    </a>
+                </li>
+                <li>
+                    <a class="signup-icon-option" href="#">
+                        <i class="fa-solid fa-user"></i>SignUp
+                    </a>
+                </li>
+                <li class="login-icon-option">
+                    <a href="#">
+                        <i class="fa-solid fa-user"></i>Login
+                    </a>
+                </li>
+            </ul>
             <div class="contact-us">
-            <p class="contact-us-tittle">
-                Contact us
-            </p>
+                <p class="contact-us-tittle">
+                    Contact us
+                </p>
                 <ul>
                     <li>
                         <a href="#" id="contact-us-icon">
                             <p>
-                            <img src="assests/img.png/mail-icon.png" alt="Mail-icon">
+                                <img src="assests/img.png/mail-icon.png" alt="Mail-icon">
                                 trackgenix@gmail.com
                             </p>
                         </a>
@@ -57,7 +63,7 @@
                     <li>
                         <a href="#" id="contact-us-icon">
                             <p>
-                            <img src="assests/img.png/phone-icon.png" alt="Phone-icon">
+                                <img src="assests/img.png/phone-icon.png" alt="Phone-icon">
                                 (000) 0000-00000
                             </p>
                         </a>
@@ -65,37 +71,39 @@
                     <li>
                         <a href="#" id="contact-us-icon">
                             <p>
-                            <img src="assests/img.png/addres-icon.png" alt="Addres-icon">
+                                <img src="assests/img.png/addres-icon.png" alt="Addres-icon">
                                 Rioja 1234. Rosario, Santa Fe. TN 00000-0000
                             </p>
                         </a>
                     </li>
-            </nav>
-        </aside>
-        <header>
-            <div class="header-background">
-                <h1>
-                    Trackgenix
-                </h1>
-                <h2>
-                    By GigaTech Sowtware Solutions SA
-                </h2>
-                <p>
-                    The company GigaTech Sowtware Solutions SA provides sowtware development services to other
-                    companies,wich have too many employees. Because of this "Trackgenix" was created.
-                </p>
-                <p>
-                    "Trackgenix" is a web page that facilitates the registration of hours worked by each employee in each
-                    project and provides information to the companies so they can make better decisions.
-                </p>
-            </div>
-        </header>
+        </nav>
+    </aside>
+    <header>
+        <div class="header-background">
+            <h1>
+                Trackgenix
+            </h1>
+            <h2>
+                By GigaTech Sowtware Solutions SA
+            </h2>
+            <p>
+                The company GigaTech Sowtware Solutions SA provides sowtware development services to other
+                companies,wich have too many employees. Because of this "Trackgenix" was created.
+            </p>
+            <p>
+                "Trackgenix" is a web page that facilitates the registration of hours worked by each employee in each
+                project and provides information to the companies so they can make better decisions.
+            </p>
+        </div>
+    </header>
+    <main>
+
         <section class="who-container">
             <article>
 
-                    <h2 class="who-tittle">
-                        Who we are
-                    </h2>
+                <h2 class="who-tittle">
+                    Who we are
+                </h2>
                 <div>
                     <p class="p1">
                         Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply
@@ -115,26 +123,32 @@
             </article>
         </section>
         <section class="why-container">
-                <h2>
-                    Why Choose Us?
-                </h2>
+            <h2>
+                Why Choose Us?
+            </h2>
             <div class="card-box-white">
                 <h3 class="h3-left">
                     Productivity Booster
                 </h3>
                 <p class="why-p-white">
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
+                    and scrambled it to make a type specimen book.
                 </p>
-                <img class="white-img" src="assests/img.png/productivy-booter-picture.png" alt="Productivity Booster image">
+                <img class="white-img" src="assests/img.png/productivy-booter-picture.png"
+                    alt="Productivity Booster image">
             </div>
             <div class="card-box-gray">
                 <div>
-                    <img class="gray-img" src="assests/img.png/work-traceability-picture.png" alt="Work Traceability image">
+                    <img class="gray-img" src="assests/img.png/work-traceability-picture.png"
+                        alt="Work Traceability image">
                     <h3 class="h3-right">
                         Work Traceability
                     </h3>
                     <p class="why-p-gray">
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+                        the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
+                        of type and scrambled it to make a type specimen book.
                     </p>
                 </div>
             </div>
@@ -143,9 +157,12 @@
                     Leadership and Team Management
                 </h3>
                 <p class="why-p-white">
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
+                    and scrambled it to make a type specimen book.
                 </p>
-                <img class="white-img" src="assests/img.png/leadership-and-team- management-picture.png" alt="Leadership and team management image">
+                <img class="white-img" src="assests/img.png/leadership-and-team- management-picture.png"
+                    alt="Leadership and team management image">
             </div>
             <div class="card-box-gray">
                 <img class="gray-img" src="assests/img.png/decision-making-picture.png" alt="Decision Making image">
@@ -153,57 +170,63 @@
                     Decision Making
                 </h3>
                 <p class="why-p-gray">
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
+                    and scrambled it to make a type specimen book.
                 </p>
             </div>
         </section>
         <section class="f-container">
-                <h2 class="f-title">
-                    Functionalities
-                </h2>
-                <div class="functionalities">
+            <h2 class="f-title">
+                Functionalities
+            </h2>
+            <div class="functionalities">
                 <article>
-                        <h3>
-                            Hours Log
-                        </h3>
-                        <img src="assests/img.png/hours-log-icon.png" alt="">
-                        <p>
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.
-                        </p>
+                    <h3>
+                        Hours Log
+                    </h3>
+                    <img src="assests/img.png/hours-log-icon.png" alt="">
+                    <p>
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+                        the industry's standard.
+                    </p>
                 </article>
                 <article>
-                        <h3>
-                            Resource Management
-                        </h3>
-                        <img src="assests/img.png/resource-management-icon.png" alt="">
-                        <p class="f-text-body">
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.
-                        </p>
+                    <h3>
+                        Resource Management
+                    </h3>
+                    <img src="assests/img.png/resource-management-icon.png" alt="">
+                    <p class="f-text-body">
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+                        the industry's standard.
+                    </p>
                 </article>
                 <article>
-                        <h3>
-                            Reports
-                        </h3>
-                        <img src="assests/img.png/reports-icon.png" alt="">
-                        <p>
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.
-                        </p>
+                    <h3>
+                        Reports
+                    </h3>
+                    <img src="assests/img.png/reports-icon.png" alt="">
+                    <p>
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+                        the industry's standard.
+                    </p>
                 </article>
                 <article>
-                        <h3>
-                            Multiple Roles
-                        </h3>
-                        <img src="assests/img.png/multiple-roles.png" alt="">
-                        <p>
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.
-                        </p>
+                    <h3>
+                        Multiple Roles
+                    </h3>
+                    <img src="assests/img.png/multiple-roles.png" alt="">
+                    <p>
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+                        the industry's standard.
+                    </p>
                 </article>
-                </div>
-            </section>
-            <section class="c-container">
-                <h2 class="c-title">
-                    Contact
-                </h2>
+            </div>
+        </section>
+        <section class="c-container">
+            <h2 class="c-title">
+                Contact
+            </h2>
             <form>
                 <span>
                     <label for="Name">
@@ -231,10 +254,10 @@
                     <label for="Email">
                         Email
                     </label>
-                    <input type="text" placeholder="Your Email Here" >
+                    <input type="text" placeholder="Your Email Here">
                 </div>
                 <div class="form-message-container">
-                    <label for="Message" >
+                    <label for="Message">
                         Message
                     </label>
                     <textarea placeholder="Your Message Here" name="Message"></textarea>
@@ -310,33 +333,35 @@
                     </li>
                 </ol>
         </section>
-        <footer>
-            <div>
-                <a href="https://www.linkedin.com/" target="_blank"></a>
-                <i class="fa-brands fa-linkedin"></i>
-            </div>
-            <div>
-                <a href="https://www.facebook.com/" target="_blank"></a>
-                <i class="fa-brands fa-facebook"></i>
-            </div>
-            <div>
-                <a href="https://twitter.com//" target="_blank"></a>
-                <i class="fa-brands fa-twitter"></i>
-            </div>
-            <div>
-                <a src="https://www.instagram.com/" alt=""></a>
-                <i class="fa-brands fa-instagram"></i>
-            </div>
-            <div>
-                <a href="https://github.com/" target="_blank"></a>
-                <i class="fa-brands fa-github"></i>
-            </div>
-            <p>
-                Rosario, Argentina
-            </p>
-            <p>
-                Copyright &copy; 2022 Radium Rocket. All right reserved.
-            </p>
-        </footer>
-    </body>
+    </main>
+    <footer>
+        <div>
+            <a href="https://www.linkedin.com/" target="_blank"></a>
+            <i class="fa-brands fa-linkedin"></i>
+        </div>
+        <div>
+            <a href="https://www.facebook.com/" target="_blank"></a>
+            <i class="fa-brands fa-facebook"></i>
+        </div>
+        <div>
+            <a href="https://twitter.com//" target="_blank"></a>
+            <i class="fa-brands fa-twitter"></i>
+        </div>
+        <div>
+            <a src="https://www.instagram.com/" alt=""></a>
+            <i class="fa-brands fa-instagram"></i>
+        </div>
+        <div>
+            <a href="https://github.com/" target="_blank"></a>
+            <i class="fa-brands fa-github"></i>
+        </div>
+        <p>
+            Rosario, Argentina
+        </p>
+        <p>
+            Copyright &copy; 2022 Radium Rocket. All right reserved.
+        </p>
+    </footer>
+</body>
+
 </html>
