BaSP-W032022: Advances in mobile flexbox

--- a/semana-03/index.html
+++ b/semana-03/index.html
@@ -86,21 +86,19 @@
             <h2>
                 By GigaTech Sowtware Solutions SA
             </h2>
-            <p>
+            <p class="header-p1" >
                 The company GigaTech Sowtware Solutions SA provides sowtware development services to other
                 companies,wich have too many employees. Because of this "Trackgenix" was created.
             </p>
-            <p>
+            <p class="header-p2" >
                 "Trackgenix" is a web page that facilitates the registration of hours worked by each employee in each
                 project and provides information to the companies so they can make better decisions.
             </p>
         </div>
     </header>
     <main>
-
         <section class="who-container">
             <article>
-
                 <h2 class="who-tittle">
                     Who we are
                 </h2>
@@ -126,54 +124,59 @@
             <h2>
                 Why Choose Us?
             </h2>
-            <div class="card-box-white">
-                <h3 class="h3-left">
-                    Productivity Booster
-                </h3>
-                <p class="why-p-white">
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
-                    and scrambled it to make a type specimen book.
-                </p>
-                <img class="white-img" src="assests/img.png/productivy-booter-picture.png"
-                    alt="Productivity Booster image">
-            </div>
-            <div class="card-box-gray">
-                <div>
-                    <img class="gray-img" src="assests/img.png/work-traceability-picture.png"
-                        alt="Work Traceability image">
-                    <h3 class="h3-right">
-                        Work Traceability
-                    </h3>
-                    <p class="why-p-gray">
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-                        the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
-                        of type and scrambled it to make a type specimen book.
-                    </p>
+            <div class="card-container">
+                <div class="card-box-white">
+                    <div>
+                        <h3 class="h3-left">
+                            Productivity Booster
+                        </h3>
+                        <p class="why-p-white">
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                            industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
+                            and scrambled it to make a type specimen book.
+                        </p>
+                    </div>
+                    <img class="white-img" src="assests/img.png/productivy-booter-picture.png" alt="Productivity Booster image">
                 </div>
-            </div>
-            <div class="card-box-white">
-                <h3 class="h3-left">
-                    Leadership and Team Management
-                </h3>
-                <p class="why-p-white">
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
-                    and scrambled it to make a type specimen book.
-                </p>
-                <img class="white-img" src="assests/img.png/leadership-and-team- management-picture.png"
-                    alt="Leadership and team management image">
-            </div>
-            <div class="card-box-gray">
-                <img class="gray-img" src="assests/img.png/decision-making-picture.png" alt="Decision Making image">
-                <h3 class="h3-right">
-                    Decision Making
-                </h3>
-                <p class="why-p-gray">
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
-                    and scrambled it to make a type specimen book.
-                </p>
+                <div class="card-box-gray">
+                    <img class="gray-img" src="assests/img.png/work-traceability-picture.png" alt="Work Traceability image">
+                    <div>
+                        <h3 class="h3-right">
+                            Work Traceability
+                        </h3>
+                        <p class="why-p-gray">
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+                            the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
+                            of type and scrambled it to make a type specimen book.
+                        </p>
+                    </div>
+                </div>
+                <div class="card-box-white">
+                    <div>
+                        <h3 class="h3-left">
+                            Leadership and Team Management
+                        </h3>
+                        <p class="why-p-white">
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                            industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
+                            and scrambled it to make a type specimen book.
+                        </p>
+                    </div>
+                    <img class="white-img" src="assests/img.png/leadership-and-team- management-picture.png" alt="Leadership and team management image">
+                </div>
+                <div class="card-box-gray">
+                    <img class="gray-img" src="assests/img.png/decision-making-picture.png" alt="Decision Making image">
+                    <div>
+                        <h3 class="h3-right">
+                            Decision Making
+                        </h3>
+                        <p class="why-p-gray">
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                            industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
+                            and scrambled it to make a type specimen book.
+                        </p>
+                    </div>
+                </div>
             </div>
         </section>
         <section class="f-container">
@@ -181,46 +184,50 @@
                 Functionalities
             </h2>
             <div class="functionalities">
-                <article>
-                    <h3>
-                        Hours Log
-                    </h3>
-                    <img src="assests/img.png/hours-log-icon.png" alt="">
-                    <p>
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-                        the industry's standard.
-                    </p>
-                </article>
-                <article>
-                    <h3>
-                        Resource Management
-                    </h3>
-                    <img src="assests/img.png/resource-management-icon.png" alt="">
-                    <p class="f-text-body">
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-                        the industry's standard.
-                    </p>
-                </article>
-                <article>
-                    <h3>
-                        Reports
-                    </h3>
-                    <img src="assests/img.png/reports-icon.png" alt="">
-                    <p>
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-                        the industry's standard.
-                    </p>
-                </article>
-                <article>
-                    <h3>
-                        Multiple Roles
-                    </h3>
-                    <img src="assests/img.png/multiple-roles.png" alt="">
-                    <p>
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-                        the industry's standard.
-                    </p>
-                </article>
+                <div>
+                    <article>
+                        <h3>
+                            Hours Log
+                        </h3>
+                        <img src="assests/img.png/hours-log-icon.png" alt="">
+                        <p>
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+                            the industry's standard.
+                        </p>
+                    </article>
+                    <article>
+                        <h3>
+                            Resource Management
+                        </h3>
+                        <img src="assests/img.png/resource-management-icon.png" alt="">
+                        <p class="f-text-body">
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+                            the industry's standard.
+                        </p>
+                    </article>
+                </div>
+                <div>
+                    <article>
+                        <h3>
+                            Reports
+                        </h3>
+                        <img src="assests/img.png/reports-icon.png" alt="">
+                        <p>
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+                            the industry's standard.
+                        </p>
+                    </article>
+                    <article>
+                        <h3>
+                            Multiple Roles
+                        </h3>
+                        <img src="assests/img.png/multiple-roles.png" alt="">
+                        <p>
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+                            the industry's standard.
+                        </p>
+                    </article>
+                </div>
             </div>
         </section>
         <section class="c-container">
