BaSP-W03-2022: Almost finished mobile landing, bronken form and last section

--- a/semana-03/index.html
+++ b/semana-03/index.html
@@ -235,28 +235,30 @@
                 Contact
             </h2>
             <form>
-                <span>
-                    <label for="Name">
-                        Name
-                    </label>
-                    <input type="text" placeholder="Your Name Here">
-                </span>
-                <span>
-                    <select name="Area">
-                        <option hidden value="Placeholder">
-                            Contact Area
-                        </option>
-                        <option value="Human Resources">
-                            Human Resources
-                        </option>
-                        <option value="Systems">
-                            Systems
-                        </option>
-                        <option value="Commercialization">
-                            Commercialization
-                        </option>
-                    </select>
-                </span>
+                <div class="name-contact">
+                    <span>
+                        <label for="Name">
+                            Name
+                        </label>
+                        <input type="text" placeholder="Your Name Here">
+                    </span>
+                    <span>
+                        <select name="Area">
+                            <option hidden value="Placeholder">
+                                Contact Area
+                            </option>
+                            <option value="Human Resources">
+                                Human Resources
+                            </option>
+                            <option value="Systems">
+                                Systems
+                            </option>
+                            <option value="Commercialization">
+                                Commercialization
+                            </option>
+                        </select>
+                    </span>
+                </div>
                 <div>
                     <label for="Email">
                         Email
@@ -282,7 +284,6 @@
             </form>
         </section>
         <section class="product-enterprise-support">
-            <!-- <img src="assests/img.png/picture-footer.png" alt=""> -->
             <div>
                 <h4>
                     Product
@@ -342,25 +343,27 @@
         </section>
     </main>
     <footer>
-        <div>
-            <a href="https://www.linkedin.com/" target="_blank"></a>
-            <i class="fa-brands fa-linkedin"></i>
-        </div>
-        <div>
-            <a href="https://www.facebook.com/" target="_blank"></a>
-            <i class="fa-brands fa-facebook"></i>
-        </div>
-        <div>
-            <a href="https://twitter.com//" target="_blank"></a>
-            <i class="fa-brands fa-twitter"></i>
-        </div>
-        <div>
-            <a src="https://www.instagram.com/" alt=""></a>
-            <i class="fa-brands fa-instagram"></i>
-        </div>
-        <div>
-            <a href="https://github.com/" target="_blank"></a>
-            <i class="fa-brands fa-github"></i>
+        <div class="icons">
+            <div>
+                <a href="https://www.linkedin.com/" target="_blank"></a>
+                <i class="fa-brands fa-linkedin"></i>
+            </div>
+            <div>
+                <a href="https://www.facebook.com/" target="_blank"></a>
+                <i class="fa-brands fa-facebook"></i>
+            </div>
+            <div>
+                <a href="https://twitter.com//" target="_blank"></a>
+                <i class="fa-brands fa-twitter"></i>
+            </div>
+            <div>
+                <a src="https://www.instagram.com/" alt=""></a>
+                <i class="fa-brands fa-instagram"></i>
+            </div>
+            <div>
+                <a href="https://github.com/" target="_blank"></a>
+                <i class="fa-brands fa-github"></i>
+            </div>
         </div>
         <p>
             Rosario, Argentina
